--- a/app/src/main/res/drawable/circle_button.xml
+++ b/app/src/main/res/drawable/circle_button.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/colorPrimary"/>
+    android:shape="rectangle">
+    <solid android:color="#FA0000"/>
     <size
-        android:width="56dp"
-        android:height="56dp"/>
+        android:width="120dp"
+        android:height="120dp"/>
 </shape>
