--- a/app/src/main/res/layout/activity_medical_history.xml
+++ b/app/src/main/res/layout/activity_medical_history.xml
@@ -1,103 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:weightSum="4"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/mainbackground"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MedicalHistory">
 
-    <EditText
-        android:id="@+id/Current"
-        android:layout_width="377dp"
-        android:layout_height="199dp"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
-        android:background="@color/Grey"
-        android:gravity="top"
-        android:inputType="textMultiLine"
-        android:maxLines="50"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.187"
-        tools:ignore="MissingConstraints" />
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <Button
-        android:id="@+id/UpdateCurrent"
-        android:layout_width="236dp"
-        android:layout_height="49dp"
-        android:layout_weight="1"
-        android:text="Update"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.478"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/TextCurrentIlness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current Illness"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.26"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
-        android:id="@+id/History"
-        android:layout_width="376dp"
-        android:layout_height="202dp"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
-        android:background="@color/Grey"
-        android:gravity="top"
-        android:inputType="textMultiLine"
-        android:maxLines="50"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.843"
-        tools:ignore="MissingConstraints" />
+        <EditText
+            android:id="@+id/Current"
+            android:layout_width="311dp"
+            android:layout_height="213dp"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="@color/Grey"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:maxLines="50"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center" />
+
+        <Button
+            android:id="@+id/UpdateCurrent"
+            android:layout_width="145dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="Update"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/TextHistory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medical History"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:layout_gravity="left" />
+
+        <EditText
+            android:id="@+id/History"
+            android:layout_width="287dp"
+            android:layout_height="229dp"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="@color/Grey"
+            android:gravity="top"
+            android:inputType="textMultiLine"
+            android:maxLines="50"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center" />
 
     <Button
         android:id="@+id/UpdateHistory"
-        android:layout_width="233dp"
-        android:layout_height="49dp"
+        android:layout_width="145dp"
+        android:layout_height="48dp"
         android:layout_weight="1"
         android:text="Update"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
-        tools:ignore="MissingConstraints" />
+        android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/TextCurrentIlness"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Current Illness"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.108" />
 
-    <TextView
-        android:id="@+id/TextHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medical History"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
