--- a/app/src/main/res/layout/personal_details.xml
+++ b/app/src/main/res/layout/personal_details.xml
@@ -76,7 +76,7 @@
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:background="#30ffffff"
-        android:hint="Phone Number"
+        android:hint="Phone number"
         android:inputType="phone"
         android:padding="15dp"
         android:textColor="@color/black"
@@ -133,7 +133,7 @@
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:background="#30ffffff"
-        android:hint="Consultant"
+        android:hint="GP"
         android:inputType="textPersonName"
         android:padding="15dp"
         android:textColor="@color/black"
@@ -152,7 +152,7 @@
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:background="#30ffffff"
-        android:hint="Number"
+        android:hint="Phone number"
         android:inputType="textPersonName"
         android:padding="15dp"
         android:textColor="@color/black"
@@ -171,7 +171,7 @@
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:background="#30ffffff"
-        android:hint="Weight"
+        android:hint="Weight: kg"
         android:inputType="textPersonName"
         android:padding="15dp"
         android:textColor="@color/black"
@@ -190,7 +190,7 @@
         android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         android:background="#30ffffff"
-        android:hint="Next_of_kin"
+        android:hint="Next of kin"
         android:inputType="textPersonName"
         android:padding="15dp"
         android:textColor="@color/black"
@@ -351,12 +351,12 @@
         android:id="@+id/consultantText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Consultant:"
+        android:text="GP:"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.59" />
