--- a/app/src/main/res/layout/activity_health_care.xml
+++ b/app/src/main/res/layout/activity_health_care.xml
@@ -13,20 +13,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Calculate heart rate:"
+            android:textColor="@color/Black"
+            android:textStyle="bold"
+            android:textSize="25sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Enter your age:"
-            android:textSize="16sp" />
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/ageEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Age"
             android:inputType="number" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter your gender:"
-            android:textSize="16sp" />
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -51,12 +62,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter your current heart rate:"
-            android:textSize="16sp" />
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/heartRateEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Heart rate:"
             android:inputType="number" />
 
         <Button
@@ -69,30 +82,43 @@
             android:id="@+id/resultTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Result"
             android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calculate BMI:"
+            android:textColor="@color/Black"
+            android:textStyle="bold"
+            android:textSize="25sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter your Weight:"
-            android:textSize="16sp" />
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/Weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Weight"
             android:inputType="number" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter your Height in meters:"
-            android:textSize="16sp" />
+            android:text="Enter your Height in centimeters:"
+            android:textColor="@color/Black"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/Height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Height"
             android:inputType="number" />
 
         <Button
@@ -105,19 +131,31 @@
             android:id="@+id/BMIText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="BMI"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/resultBMI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Result"
             android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calculate blood pressure:"
+            android:textColor="@color/Black"
+            android:textStyle="bold"
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"/>
+            android:text="Enter your Age:"
+            android:textColor="@color/Black"
+            android:textSize="25sp"/>
 
         <EditText
             android:id="@+id/Agefield"
@@ -169,6 +207,7 @@
             android:id="@+id/bloodresult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Result"
             android:textSize="16sp" />
 
     </LinearLayout>
