--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.805" />
 
     <Button
-        android:id="@+id/idBtnGenerateQR"
+        android:id="@+id/GenerateQR"
         android:layout_width="179dp"
         android:layout_height="59dp"
         android:layout_below="@id/QRname"
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.903" />
 
     <Button
-        android:id="@+id/testButton"
+        android:id="@+id/scanButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scan"
